# StillFace

./: .gitignore  README.md  pyproject.toml  requirements.txt
StillFace/data_collection/: FingerPulseLatencyV0.19.html  check_missing.py
StillFace/sync_and_cut/: check_synced.py  clean.sh  cut.py  cut.sh  sync.py  sync.sh  visualize.py
